	PR target/35083 	* optabs.c (expand_float): Do not check for decimal modes when 	expanding unsigned integer through signed conversion.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@132144 138bc75d-0d04-0410-961f-82ee72b054a4